--- a/frontend-konark/public/index.html
+++ b/frontend-konark/public/index.html
@@ -35,6 +35,9 @@
       href="%PUBLIC_URL%/plugins/bootstrap/css/bootstrap.min.css"
     />
 
+    <link rel="stylesheet" type="text/css" href="http://cdn.webrupee.com/font">
+    <script src=http://cdn.webrupee.com/js type=”text/javascript”></script>
+
     <!-- Animate css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/animate/animate.css" />
     <!-- Slick Carousel -->
