--- a/frontend-konark/public/index.html
+++ b/frontend-konark/public/index.html
@@ -27,6 +27,8 @@
       href="%PUBLIC_URL%/favicon.png"
     />
 
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <!-- Themefisher Icon font -->
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/kodark-font/style.css" />
     <!-- bootstrap.min css -->
